<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/nestedScrollView"
    android:background="@color/colorPrimary"
    android:padding="20dp"
    tools:context="com.ndhuproject.csieb0020companion.HelpActivity">

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_help"/>

        <TextView
            android:id="@+id/subtitle_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Welcome to CSIE-B0020 Companion!"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/grey_hard"
            android:padding="18dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_message"
            android:padding="18dp"/>

        <ImageView
            android:layout_width="200dp"
            android:layout_height="340dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_help2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_message_two"
            android:padding="18dp"/>

        <TextView
            android:id="@+id/function_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:text="@string/functions_list"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_message_three"
            android:padding="18dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/help_message_four"/>

    </android.support.v7.widget.LinearLayoutCompat>

</android.support.v4.widget.NestedScrollView>